fix green button bleed in login form when huid is not linked to an existing site. #6094

--- a/openscholar/themes/os_default/css/os_default.css
+++ b/openscholar/themes/os_default/css/os_default.css
@@ -344,6 +344,11 @@ border-radius: 4px;
 background: #3b76b1;
 }
 
+#pin-register.pin-button,
+#pin-register.pin-button:hover {
+background-color: transparent;
+}
+
 .logged-in.no-sidebars.page-user #content .user-add-website {
 background: #3D9B13;
 }
